--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           "Content-Type": "application/json",
         },
         body: JSON.stringify({
-          message: "Atualizar data.json",
+          message: "Update data.json",
           content: btoa(JSON.stringify(data)),
         }),
       })
